# netology_4_4

list/: CMakeLists.txt  listnode.h  main.cpp  main_test.cpp  testing_task_1.h  testing_task_2.h
